--- a/src/components/SocialButtons.astro
+++ b/src/components/SocialButtons.astro
@@ -39,7 +39,7 @@ const { class: className, ...rest } = Astro.props
         position: absolute;
         width: 50px;
         height: 50px;
-        background: linear-gradient(225deg, #eb6904 0%, #784BA0 50%, #eb6904 100%);
+        background: linear-gradient(225deg, #eb6904 0%, #ebb504 50%, #eb6904 100%);
         border-radius: 50%;
         z-index: -1;
         transition: 0.3s ease-in;
