--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -77,7 +77,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
         font-size: 4rem;
         font-weight: 800;
         background-color: #eb6904;
-        background-image: linear-gradient(225deg, #784BA0 10%, #eb7b04 70%, #eb6904 100%);
+        background-image: linear-gradient(225deg, #ebb504 10%, #eb6904 70%, #eb6904 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         transition: all .2s;
@@ -87,7 +87,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
         font-size: 2.5rem; 
         font-weight: 800;
         background-color: #eb6904;
-        background-image: linear-gradient(225deg, #eb6904 10%, #eb7b04 70%, #784BA0 100%);
+        background-image: linear-gradient(225deg, #eb3e04 10%, #eb7b04 70%, #ebb504 100%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         transition: all .2s; 
@@ -137,7 +137,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
           transition: background-color 0.3s ease, transform 0.3s ease, background-image 0.3s ease;
      }
      .cv-container a:hover {
-          background-image: linear-gradient(225deg, #eb6904 0%, #784BA0 50%, #2B86C5 100%);
+          background-image: linear-gradient(225deg, #ebb504 0%, #eb6904 50%, #784BA0 100%);
           transform: scale(1.1); 
           color: #ffffff;
      }
