--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -10,7 +10,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
         <SocialButtons class="social-buttons" />
     </div>
     <div class="cv-container">
-        <a href="/public/Assets/FranPazosCV.pdf" target="_blank">Download CV</a>
+        <a href="/Assets/FranPazosCV.pdf" target="_blank">Download CV</a>
     </div>
     </div>
 </section>
@@ -53,7 +53,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
         background-attachment: fixed;
         width: 100%; 
         height: 100vh; 
-        background-image: url("public/img/volcanic-background.jpeg");
+        background-image: url("/Assets/volcanic-background.jpeg");
         background-size: cover;
         background-repeat: no-repeat; 
         background-position: center;
