--- a/src/components/sections/Contact.astro
+++ b/src/components/sections/Contact.astro
@@ -13,7 +13,7 @@ import Section from "@/components/Section.astro"
     .contact-container {
         display: flex;
         flex-direction: column;
-        padding: 0 20px 70px 20px;  
+        padding: 50px 20px 70px 20px;  
         background-color: #13151a;
         margin-bottom: 100px;
     }
