--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -5,7 +5,7 @@ import Section from "@/components/Section.astro"
 ---
 
 <Section>
-    <section id="experiencia" class="experience-section">
+    <section id="experience" class="experience-section">
         <div class="title-container">
             <h2>Experience</h2>
         </div>
@@ -26,7 +26,8 @@ import Section from "@/components/Section.astro"
 
 <style>
     .experience-section{
-        padding: 0 30px;  
+        margin-top: 10%;
+        padding: 80px;  
         background-color: #13151a;
     }
     .timeline {
