--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -55,7 +55,7 @@ import SocialButtons from '../SocialButtons.astro'
       <div class="menu">
         <nav>
           <a href="/" style="animation-delay: 0.1s"><img class="icon" src="/icons/icon-home.svg">Home</a>
-          <a href="#experiencia" style="animation-delay: 0.1s"><img class="icon" src="/icons/icon-tools.svg">Experience</a>
+          <a href="#experience" style="animation-delay: 0.1s"><img class="icon" src="/icons/icon-tools.svg">Experience</a>
           <a href="#technologies" style="animation-delay: 0.3s"><img class="icon" src="/icons/icon-education.svg">Tech</a>
           <a href="#projects" style="animation-delay: 0.2s"><img class="icon" src="/icons/icon-code.svg">Projects</a>
           <a href="#about" style="animation-delay: 0.1s"><img class="icon" src="/icons/icon-user.svg">About</a>
