--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -39,6 +39,7 @@ const isSingleProject = PROJECTS.length === 1;
         background-color: #13151a;
         max-width: 1100px;
         margin: 0 auto 50px;
+        padding-top: 100px;
     }
 
     .projects-container {
