--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -33,6 +33,7 @@ import Section from "@/components/Section.astro"
           flex-direction: column;
           justify-content: center;
           padding: 50px 30px;  
+          margin-top: 10%;
           background-color: #13151a;
      }
 
