--- a/src/components/sections/Technologies.astro
+++ b/src/components/sections/Technologies.astro
@@ -24,7 +24,7 @@ import Section from "@/components/Section.astro"
         flex-direction: column;
         align-items: center;  
         background-color: #13151a;
-        padding: 0 20px;
+        padding: 80px 20px 0 20px;s
         text-align: center;
     }
 
