--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -39,7 +39,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
     .hero {
         position: relative;
         width: 100%;
-        height: 800px; 
+        height: 100vh; 
     }
 
     .background {
