Attempt to fix hero image in mobile devices

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -150,6 +150,10 @@ import SocialButtons from "@/components/SocialButtons.astro"
     h2{
         font-size: 3rem;
     }
+    .background {
+        background-size: contain; /* or try background-size: 100% auto; */
+        background-position: center top;
+    }
     }
 
    @media(min-width:1024px){
@@ -159,6 +163,11 @@ import SocialButtons from "@/components/SocialButtons.astro"
     }
     h2{
         font-size: 3.5rem;
+    }
+
+    .background {
+        background-size: contain; /* or try background-size: 100% auto; */
+        background-position: center top;
     }
     
     @keyframes wave {
