seccond attempt to fix hero image on mobile

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -151,7 +151,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
         font-size: 3rem;
     }
     .background {
-        background-size: contain; /* or try background-size: 100% auto; */
+        background-size: 100% auto; /* or try background-size: 100% auto; */
         background-position: center top;
     }
     }
@@ -166,7 +166,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
     }
 
     .background {
-        background-size: contain; /* or try background-size: 100% auto; */
+        background-size: 100% auto; /* or try background-size: 100% auto; */
         background-position: center top;
     }
     
