--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -53,7 +53,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
         background-attachment: fixed;
         width: 100%; 
         height: 100vh; 
-        background-image: url("/Assets/volcanic-background.jpeg");
+        background-image: url("/Assets/upscaled-volcanic-background.png");
         background-size: cover;
         background-repeat: no-repeat; 
         background-position: center;
@@ -150,10 +150,6 @@ import SocialButtons from "@/components/SocialButtons.astro"
     h2{
         font-size: 3rem;
     }
-    .background {
-        background-size: 100% auto; /* or try background-size: 100% auto; */
-        background-position: center top;
-    }
     }
 
    @media(min-width:1024px){
@@ -164,12 +160,6 @@ import SocialButtons from "@/components/SocialButtons.astro"
     h2{
         font-size: 3.5rem;
     }
-
-    .background {
-        background-size: 100% auto; /* or try background-size: 100% auto; */
-        background-position: center top;
-    }
-    
     @keyframes wave {
         0% {
             transform: rotate(0deg);
