--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -53,7 +53,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
         background-attachment: fixed;
         width: 100%; 
         height: 100vh; 
-        background-image: url("/Assets/upscaled-volcanic-background.png");
+        background-image: url("/Assets/mobile_volcanic-background.png");
         background-size: cover;
         background-repeat: no-repeat; 
         background-position: center;
@@ -142,7 +142,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
           color: #ffffff;
      }
 
-   @media(max-width:768px){
+   @media(min-width:768px){
     h1{
         font-size: 5rem;
         letter-spacing: -6px;
@@ -151,10 +151,10 @@ import SocialButtons from "@/components/SocialButtons.astro"
         font-size: 3rem;
     }
     .background{
-        background-image: url("/Assets/mobile_volcanic-background.png");
+        background-image: url("/Assets/upscaled-volcanic-background.png");
     }
    }
-   @media(max-width:1024px){
+   @media(min-width:1024px){
     h1{
         font-size: 8rem;
         letter-spacing: -6px;
