updated CV, fixed avatar img & hero img

--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -8,7 +8,7 @@ import Section from "@/components/Section.astro"
           <div class="about-container">    
                <div class="img-container">             
                     <figure class="personal-img">
-                         <img src="/img/fran-avatar.svg" alt="">
+                         <img src="/img/fran_avatar.svg" alt="">
                     </figure>
                </div>
                <div class="text-container">
