--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -10,7 +10,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
         <SocialButtons class="social-buttons" />
     </div>
     <div class="cv-container">
-        <a href="/Assets/FranPazosCV.pdf" target="_blank">Download CV</a>
+        <a href="/Assets/CV_Fran-Pazos_2024.pdf" target="_blank">Download CV</a>
     </div>
     </div>
 </section>
@@ -53,8 +53,8 @@ import SocialButtons from "@/components/SocialButtons.astro"
         background-attachment: fixed;
         width: 100%; 
         height: 100vh; 
-        background-image: url("/Assets/mobile_volcanic-background.png");
-        background-size: cover;
+        background-image: url("/Assets/volcanic-background.jpeg");
+        background-size: auto;
         background-repeat: no-repeat; 
         background-position: center;
         right: 0px;
@@ -151,7 +151,8 @@ import SocialButtons from "@/components/SocialButtons.astro"
         font-size: 3rem;
     }
     .background{
-        background-image: url("/Assets/upscaled-volcanic-background.png");
+        background-image: url("/Assets/volcanic-background.jpeg");
+        background-size: cover;
     }
    }
    @media(min-width:1024px){
