--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -48,14 +48,14 @@ import SocialButtons from "@/components/SocialButtons.astro"
         align-items: center;
         justify-content: center;
         text-align: center;
-        overflow: hidden;
+        overflow: hidden; 
         position: relative;
-        background-attachment: fixed;
+        background-attachment: fixed; 
         width: 100%; 
         height: 100vh; 
-        background-image: url("/Assets/volcanic-background.jpeg");
-        background-size: auto;
-        background-repeat: no-repeat; 
+        background-image: url("/Assets/IMG_5851.jpg");
+        background-size: cover; 
+        background-repeat: no-repeat;
         background-position: center;
         right: 0px;
         left: 0px;
@@ -152,7 +152,6 @@ import SocialButtons from "@/components/SocialButtons.astro"
     }
     .background{
         background-image: url("/Assets/volcanic-background.jpeg");
-        background-size: cover;
     }
    }
    @media(min-width:1024px){
