--- a/src/components/SocialButtons.astro
+++ b/src/components/SocialButtons.astro
@@ -2,50 +2,87 @@
 import Github from "@/components/icons/Github.astro"
 import Linkedin from "@/components/icons/Linkedin.astro"
 
-
-
-const { class: className, ...rest } = Astro.props
+const { class: className, ...rest } = Astro.props;
 ---
 
-
-<div class:list={['social-buttons', className]} {...rest}>
+<div id="social-buttons-wrapper">
+  <div id="mobile-buttons" class="mobile-alternative" style="display: none;">
+    <a href="https://github.com/franpazos" target="_blank" class="mobile-icon">
+      <img src="/icons/BiGithub.svg" alt="GitHub Icon" />
+    </a>
+    <a href="https://www.linkedin.com/in/franpazos/" target="_blank" class="mobile-icon">
+      <img src="/icons/CibLinkedin.svg" alt="LinkedIn Icon" />
+    </a>
+  </div>
+  <div id="desktop-buttons" class:list={["social-buttons", className]} {...rest}>
     <a href="https://github.com/franpazos" target="_blank"><Github /></a>
     <a href="https://www.linkedin.com/in/franpazos/" target="_blank"><Linkedin /></a>
+  </div>
 </div>
 
+<script>
+  if (typeof window !== "undefined") {
+    document.addEventListener("DOMContentLoaded", () => {
+      const isMobile = window.matchMedia('(max-width: 767px)').matches;
+      const mobileButtons = document.getElementById('mobile-buttons');
+      const desktopButtons = document.getElementById('desktop-buttons');
+
+      if (isMobile && mobileButtons && desktopButtons) {
+        console.log('its a mobile');
+        mobileButtons.style.display = 'block';
+        desktopButtons.style.display = 'none';
+      } else if (mobileButtons && desktopButtons) {
+        mobileButtons.style.display = 'none';
+        desktopButtons.style.display = 'block';
+      }
+    });
+  }
+</script>
+
 <style>
-     .social-buttons{
-        display: flex;
-        gap: 30px;
-        padding: 20px;
-        position: relative;
-        z-index: 3;
-    }
+  .social-buttons{
+    display: flex;
+    gap: 30px;
+    padding: 20px;
+    position: relative;
+    z-index: 3;
+  }
 
-    .social-buttons a{
-        display: inline-flex;
-        text-decoration: none;
-        font-size: 18px;
-        width: 30px;
-        height: 40px;
-        color: #000;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        margin: 15px;
-    }
-    .social-buttons a::before{
-        content: "";
-        position: absolute;
-        width: 50px;
-        height: 50px;
-        background: linear-gradient(225deg, #eb6904 0%, #ebb504 50%, #eb6904 100%);
-        border-radius: 50%;
-        z-index: -1;
-        transition: 0.3s ease-in;
-    }
+  .social-buttons a{
+    display: inline-flex;
+    text-decoration: none;
+    font-size: 18px;
+    width: 30px;
+    height: 40px;
+    color: #000;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 15px;
+  }
+  .social-buttons a::before{
+    content: "";
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background: linear-gradient(225deg, #eb6904 0%, #ebb504 50%, #eb6904 100%);
+    border-radius: 50%;
+    z-index: -1;
+    transition: 0.3s ease-in;
+  }
 
-    .social-buttons a:hover::before{
-        transform: scale(0);
-    }
+  .social-buttons a:hover::before{
+    transform: scale(0);
+  }
+
+  .mobile-alternative {
+    display: flex;
+    gap: 20px;
+    padding: 10px;
+  }
+
+  .mobile-icon {
+    width: 40px;
+    height: 40px;
+  }
 </style>
