--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -16,7 +16,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
 </section>
 
 <script type="module">
-    import { gsap } from 'https://cdn.skypack.dev/gsap';
+    import { gsap } from 'https://cdn.skypack.dev/gsap'; 
   
     function initAnimation() {
       gsap.set(['.name', 'h1', 'h2'], { y: 100, opacity: 0, visibility: 'hidden' });
@@ -53,7 +53,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
         background-attachment: fixed; 
         width: 100%; 
         height: 100vh; 
-        background-image: url("/Assets/IMG_5851.jpg");
+        background-image: url("/Assets/peakpx.jpg");
         background-size: cover; 
         background-repeat: no-repeat;
         background-position: center;
