--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -50,7 +50,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
         text-align: center;
         overflow: hidden; 
         position: relative;
-        background-attachment: fixed; 
+        /* background-attachment: fixed;  */
         width: 100%; 
         height: 100vh; 
         background-image: url("/Assets/peakpx.jpg");
