--- a/src/components/SocialButtons.astro
+++ b/src/components/SocialButtons.astro
@@ -3,44 +3,28 @@ import Github from "@/components/icons/Github.astro"
 import Linkedin from "@/components/icons/Linkedin.astro"
 
 const { class: className, ...rest } = Astro.props;
----
+--- 
 
-<div id="social-buttons-wrapper">
-  <div id="mobile-buttons" class="mobile-alternative" style="display: none;">
-    <a href="https://github.com/franpazos" target="_blank" class="mobile-icon">
-      <img src="/icons/BiGithub.svg" alt="GitHub Icon" />
-    </a>
-    <a href="https://www.linkedin.com/in/franpazos/" target="_blank" class="mobile-icon">
-      <img src="/icons/CibLinkedin.svg" alt="LinkedIn Icon" />
-    </a>
-  </div>
-  <div id="desktop-buttons" class:list={["social-buttons", className]} {...rest}>
+<div id="desktop" class:list={['social-buttons', className]} {...rest}>
     <a href="https://github.com/franpazos" target="_blank"><Github /></a>
     <a href="https://www.linkedin.com/in/franpazos/" target="_blank"><Linkedin /></a>
-  </div>
+</div>
+<div id="mobile" class:list={['social-buttons', className]} {...rest}>
+    <a href="http://github.com/franpazos" target="_blank"><img src="public/icons/BiGithub.svg" alt="Github icon"></a>
+    <a href="http://linkedin.com/in/franpazos" target="_blank"><img src="public/icons/CibLinkedin.svg" alt="LinkedIn icon"></a>
 </div>
 
-<script>
-  if (typeof window !== "undefined") {
-    document.addEventListener("DOMContentLoaded", () => {
-      const isMobile = window.matchMedia('(max-width: 767px)').matches;
-      const mobileButtons = document.getElementById('mobile-buttons');
-      const desktopButtons = document.getElementById('desktop-buttons');
-
-      if (isMobile && mobileButtons && desktopButtons) {
-        console.log('its a mobile');
-        mobileButtons.style.display = 'block';
-        desktopButtons.style.display = 'none';
-      } else if (mobileButtons && desktopButtons) {
-        mobileButtons.style.display = 'none';
-        desktopButtons.style.display = 'block';
-      }
-    });
-  }
-</script>
-
 <style>
-  .social-buttons{
+
+  @media (min-width: 768px) {
+
+  #desktop {
+    display: block;
+  }
+  #mobile {
+    display: none;
+  }
+  .social-buttons {
     display: flex;
     gap: 30px;
     padding: 20px;
@@ -48,7 +32,7 @@ const { class: className, ...rest } = Astro.props;
     z-index: 3;
   }
 
-  .social-buttons a{
+  .social-buttons a {
     display: inline-flex;
     text-decoration: none;
     font-size: 18px;
@@ -72,17 +56,32 @@ const { class: className, ...rest } = Astro.props;
   }
 
   .social-buttons a:hover::before{
-    transform: scale(0);
+    transform: scale(0); 
+  }
+}
+
+  @media(max-width:768px){
+
+    #desktop {
+      display: none;
+    }
+    #mobile {
+      display: block;
+    }
+
+    .social-buttons img {
+      width: 38px;
+      height: 50px;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      margin: 15px;
+    }
+
+    .social-buttons img:hover {
+      transform: scale(1.1);
+    }
+
   }
 
-  .mobile-alternative {
-    display: flex;
-    gap: 20px;
-    padding: 10px;
-  }
-
-  .mobile-icon {
-    width: 40px;
-    height: 40px;
-  }
 </style>
