--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -50,10 +50,9 @@ import SocialButtons from "@/components/SocialButtons.astro"
         text-align: center;
         overflow: hidden; 
         position: relative;
-        /* background-attachment: fixed;  */
         width: 100%; 
         height: 100vh; 
-        background-image: url("/Assets/peakpx.jpg");
+        background-image: url("/Assets/volcanic-background.jpeg");
         background-size: cover; 
         background-repeat: no-repeat;
         background-position: center;
@@ -152,6 +151,7 @@ import SocialButtons from "@/components/SocialButtons.astro"
     }
     .background{
         background-image: url("/Assets/volcanic-background.jpeg");
+        background-attachment: fixed; 
     }
    }
    @media(min-width:1024px){
