--- a/src/components/SocialButtons.astro
+++ b/src/components/SocialButtons.astro
@@ -10,8 +10,8 @@ const { class: className, ...rest } = Astro.props;
     <a href="https://www.linkedin.com/in/franpazos/" target="_blank"><Linkedin /></a>
 </div>
 <div id="mobile" class:list={['social-buttons', className]} {...rest}>
-    <a href="http://github.com/franpazos" target="_blank"><img src="public/icons/BiGithub.svg" alt="Github icon"></a>
-    <a href="http://linkedin.com/in/franpazos" target="_blank"><img src="public/icons/CibLinkedin.svg" alt="LinkedIn icon"></a>
+    <a href="http://github.com/franpazos" target="_blank"><img src="./../../public/icons/BiGithub.svg" alt="Github icon"></a>
+    <a href="http://linkedin.com/in/franpazos" target="_blank"><img src="./../../public/icons/CibLinkedin.svg" alt="LinkedIn icon"></a>
 </div>
 
 <style>
