Fixed img paths

--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -57,7 +57,7 @@ import SocialButtons from '../SocialButtons.astro'
           <a href="#technologies" style="animation-delay: 0.3s"><img class="icon" src="/icons/icon-education.svg" alt="Tech Icon">Tech</a>
           <a href="#projects" style="animation-delay: 0.2s"><img class="icon" src="/icons/icon-code.svg" alt="Projects Icon">Projects</a>
           <a href="#about" style="animation-delay: 0.1s"><img class="icon" src="/icons/icon-user.svg" alt="About Icon">About</a>
-          <a href="#contact" style="animation-delay: 0.5s"><img class="icon" src="/public/icons/icon-mail.svg" alt="Contact Icon">Contact</a>
+          <a href="#contact" style="animation-delay: 0.5s"><img class="icon" src="/icons/icon-mail.svg" alt="Contact Icon">Contact</a>
           <div class="social-buttons">
             <SocialButtons />
           </div>
